--- a/locales/ko.json
+++ b/locales/ko.json
@@ -8,8 +8,56 @@
   "lookbook_title": "라이브 준비를 위한 셀렉션",
   "filter_all": "전체",
   "filter_fashion": "패션",
+  "filter_beauty": "뷰티",
+  "filter_wellness": "건기식",
+  "filter_goods": "잡화",
   "metric_products": "등록된 룩",
   "metric_updated": "최근 업데이트",
+  "metric_suppliers": "공급업체",
+  "metric_suppliers_caption": "라이브 준비 완료",
+  "metric_sellers": "셀러 풀",
+  "metric_sellers_caption": "셀렉션 대기",
+  "metric_members": "일반회원",
+  "metric_members_caption": "소식 구독",
+  "metric_error": "지표를 불러오지 못했습니다.",
+  "lookbook_loader": "다음 룩을 불러오는 중...",
   "selection_title": "셀렉션 바구니",
-  "selection_subtitle": "스튜디오 요청 전까지 원하는 룩을 모아두세요. 카테고리별 필수 정보가 자동으로 매핑됩니다."
+  "selection_subtitle": "스튜디오 요청 전까지 원하는 룩을 모아두세요.",
+  "selection_export": "룩시트 10초 생성",
+  "selection_summary_title": "요약",
+  "selection_summary_empty": "현재 담은 룩이 없습니다.",
+  "studio_title": "스튜디오 셀렉션 체크아웃",
+  "studio_subtitle": "셀렉션 담기 → 스튜디오 예약까지 한 번에 완료하세요.",
+  "studio_seller_label": "셀러 명",
+  "studio_seller_placeholder": "셀러 브랜드명을 입력하세요",
+  "studio_date_label": "요청 날짜",
+  "studio_channel_label": "방송 채널",
+  "studio_channel_option_default": "채널 선택",
+  "studio_channel_option_naver": "네이버 쇼핑라이브",
+  "studio_channel_option_kakao": "카카오 쇼핑라이브",
+  "studio_channel_option_tiktok": "틱톡 라이브",
+  "studio_channel_option_self": "자체몰 라이브",
+  "studio_notes_label": "요청 메모",
+  "studio_notes_placeholder": "준비 요청 사항, 협의가 필요한 포인트를 적어주세요",
+  "studio_submit": "요청 등록",
+  "checklist_title": "방송 준비 체크리스트",
+  "checklist_subtitle": "업로드 규칙, 검수, 세트 정리까지 문서 한 줄로 기록합니다.",
+  "checklist_card1_title": "공급업체 업로드 규칙",
+  "checklist_card1_li1": "실측 4항목(어깨, 가슴, 총장, 소매) 필수 입력",
+  "checklist_card1_li2": "혼용률과 세탁 주의 문구 표준화",
+  "checklist_card1_li3": "사진 4장 이상 · 배경 흰색 유지",
+  "checklist_card1_li4": "재고 수량·입고 가능일 업데이트",
+  "checklist_card2_title": "스튜디오 준비",
+  "checklist_card2_li1": "사이즈 샘플 실측 재확인",
+  "checklist_card2_li2": "하자 체크 및 보수 여부 메모",
+  "checklist_card2_li3": "세트별 라벨링 및 스티밍 완료",
+  "checklist_card2_li4": "룩시트 출력 · 진행자 공유",
+  "checklist_card3_title": "교환·반품 기준",
+  "checklist_card3_li1": "착용 흔적·세탁 흔적이 있을 경우 제외",
+  "checklist_card3_li2": "원단 불량·배송 오배송 즉시 교환 진행",
+  "checklist_card3_li3": "라이브 중 공지한 조건 그대로 적용",
+  "checklist_card3_li4": "문서 기록 48시간 내 공유",
+  "footer_subtitle": "동대문 라이브커머스를 위한 준비 도구. 고른다 → 준비한다 → 방송한다.",
+  "footer_contact": "문의: luce@lookbook.app · 02-000-0000",
+  "footer_copyright": "© 2025 LUCE Commerce Studio. All rights reserved."
 }
