--- a/locales/en.json
+++ b/locales/en.json
@@ -1,15 +1,63 @@
 {
   "nav_lookbook": "Lookbook",
   "nav_selection": "Selection",
-  "nav_studio": "Studio Selection",
+  "nav_studio": "Studio",
   "nav_checklist": "Checklist",
   "nav_admin": "Admin",
   "signup": "Sign Up",
-  "lookbook_title": "Selection for Live Prep",
+  "lookbook_title": "Selection for Live Commerce",
   "filter_all": "All",
   "filter_fashion": "Fashion",
+  "filter_beauty": "Beauty",
+  "filter_wellness": "Wellness",
+  "filter_goods": "Goods",
   "metric_products": "Registered Looks",
   "metric_updated": "Last updated",
+  "metric_suppliers": "Suppliers",
+  "metric_suppliers_caption": "Ready for Live",
+  "metric_sellers": "Seller Pool",
+  "metric_sellers_caption": "Pending Selection",
+  "metric_members": "Members",
+  "metric_members_caption": "Subscribed",
+  "metric_error": "Failed to load metrics.",
+  "lookbook_loader": "Loading next looks...",
   "selection_title": "Selection Cart",
-  "selection_subtitle": "Collect looks before requesting the studio. Required information is mapped automatically by category."
+  "selection_subtitle": "Collect looks before requesting the studio.",
+  "selection_export": "Create Looksheet (10s)",
+  "selection_summary_title": "Summary",
+  "selection_summary_empty": "No looks in your cart.",
+  "studio_title": "Studio Selection Checkout",
+  "studio_subtitle": "Complete selection and studio reservation at once.",
+  "studio_seller_label": "Seller Name",
+  "studio_seller_placeholder": "Enter seller brand name",
+  "studio_date_label": "Request Date",
+  "studio_channel_label": "Broadcast Channel",
+  "studio_channel_option_default": "Select Channel",
+  "studio_channel_option_naver": "Naver Shopping Live",
+  "studio_channel_option_kakao": "Kakao Shopping Live",
+  "studio_channel_option_tiktok": "TikTok Live",
+  "studio_channel_option_self": "Owned Mall Live",
+  "studio_notes_label": "Request Memo",
+  "studio_notes_placeholder": "Notes for preparation, points to discuss...",
+  "studio_submit": "Submit Request",
+  "checklist_title": "Broadcast Prep Checklist",
+  "checklist_subtitle": "Track rules, inspection, and set organization in one line.",
+  "checklist_card1_title": "Supplier Upload Rules",
+  "checklist_card1_li1": "Required: 4 measurements (shoulder, chest, length, sleeve)",
+  "checklist_card1_li2": "Standardize fabric content and washing instructions",
+  "checklist_card1_li3": "4+ photos, maintain white background",
+  "checklist_card1_li4": "Update stock quantity and availability date",
+  "checklist_card2_title": "Studio Prep",
+  "checklist_card2_li1": "Re-check sample size measurements",
+  "checklist_card2_li2": "Check for defects and note repair status",
+  "checklist_card2_li3": "Complete labeling and steaming for each set",
+  "checklist_card2_li4": "Print look sheet and share with host",
+  "checklist_card3_title": "Exchange/Return Policy",
+  "checklist_card3_li1": "Exclude if signs of wear or washing",
+  "checklist_card3_li2": "Immediate exchange for fabric defects or wrong delivery",
+  "checklist_card3_li3": "Apply conditions exactly as announced during live",
+  "checklist_card3_li4": "Share document records within 48 hours",
+  "footer_subtitle": "The prep tool for Dongdaemun Live Commerce. Select → Prep → Broadcast.",
+  "footer_contact": "Contact: luce@lookbook.app · +82-2-000-0000",
+  "footer_copyright": "© 2025 LUCE Commerce Studio. All rights reserved."
 }
