--- a/locales/zh.json
+++ b/locales/zh.json
@@ -1,15 +1,63 @@
 {
   "nav_lookbook": "造型书",
   "nav_selection": "精选",
-  "nav_studio": "工作室精选",
+  "nav_studio": "工作室",
   "nav_checklist": "清单",
   "nav_admin": "管理员",
   "signup": "注册",
   "lookbook_title": "为直播准备的精选",
   "filter_all": "全部",
   "filter_fashion": "时尚",
+  "filter_beauty": "美妆",
+  "filter_wellness": "健康",
+  "filter_goods": "杂货",
   "metric_products": "已登记造型",
   "metric_updated": "最近更新",
+  "metric_suppliers": "供应商",
+  "metric_suppliers_caption": "直播准备就绪",
+  "metric_sellers": "卖家池",
+  "metric_sellers_caption": "等待精选",
+  "metric_members": "会员",
+  "metric_members_caption": "已订阅",
+  "metric_error": "无法加载指标。",
+  "lookbook_loader": "正在加载下一个造型...",
   "selection_title": "精选篮",
-  "selection_subtitle": "在请求工作室之前，请收集您想要的造型。所需信息将按类别自动映射。"
+  "selection_subtitle": "在请求工作室之前收集造型。",
+  "selection_export": "生成造型表 (10秒)",
+  "selection_summary_title": "摘要",
+  "selection_summary_empty": "您的篮子中没有造型。",
+  "studio_title": "工作室精选结帐",
+  "studio_subtitle": "一次完成精选和工作室预订。",
+  "studio_seller_label": "卖家名称",
+  "studio_seller_placeholder": "输入卖家品牌名称",
+  "studio_date_label": "请求日期",
+  "studio_channel_label": "广播频道",
+  "studio_channel_option_default": "选择频道",
+  "studio_channel_option_naver": "Naver 购物直播",
+  "studio_channel_option_kakao": "Kakao 购物直播",
+  "studio_channel_option_tiktok": "TikTok 直播",
+  "studio_channel_option_self": "自有商城直播",
+  "studio_notes_label": "请求备注",
+  "studio_notes_placeholder": "准备请求事项，需要协商的要点...",
+  "studio_submit": "提交请求",
+  "checklist_title": "直播准备清单",
+  "checklist_subtitle": "用一行文字记录上传规则、检查和布景整理。",
+  "checklist_card1_title": "供应商上传规则",
+  "checklist_card1_li1": "必须输入4项实测（肩宽、胸围、总长、袖长）",
+  "checklist_card1_li2": "统一面料成分和洗涤注意事项",
+  "checklist_card1_li3": "4张以上照片，保持白色背景",
+  "checklist_card1_li4": "更新库存数量和可入库日期",
+  "checklist_card2_title": "工作室准备",
+  "checklist_card2_li1": "重新确认样品尺寸实测",
+  "checklist_card2_li2": "检查瑕疵并备注是否维修",
+  "checklist_card2_li3": "完成各套装的标签和蒸汽熨烫",
+  "checklist_card2_li4": "打印造型表并分享给主持人",
+  "checklist_card3_title": "换货/退货标准",
+  "checklist_card3_li1": "如有穿着痕迹或洗涤痕迹则除外",
+  "checklist_card3_li2": "面料不良或配送错误立即进行换货",
+  "checklist_card3_li3": "严格按照直播中公布的条件执行",
+  "checklist_card3_li4": "48小时内共享文件记录",
+  "footer_subtitle": "东大门直播电商的准备工具。挑选 → 准备 → 广播。",
+  "footer_contact": "联系: luce@lookbook.app · +82-2-000-0000",
+  "footer_copyright": "© 2025 LUCE Commerce Studio. 保留所有权利。"
 }
