Implement multilingual signup flow with Supabase profile sync

--- a/locales/ko.json
+++ b/locales/ko.json
@@ -5,6 +5,71 @@
   "nav_checklist": "체크리스트",
   "nav_admin": "어드민",
   "signup": "회원가입",
+  "signup_status_tag": "SIGNUP STATUS",
+  "signup_status_title": "회원 가입 현황",
+  "signup_status_description": "실시간으로 접수된 회원 정보를 확인하세요.",
+  "signup_status_name": "이름",
+  "signup_status_type": "회원 유형",
+  "signup_status_company": "회사/브랜드",
+  "signup_status_platforms": "주요 플랫폼",
+  "signup_status_channel": "채널 URL",
+  "signup_status_marketing": "마케팅 수신",
+  "signup_status_created": "가입일",
+  "signup_status_loading": "가입 정보를 불러오는 중입니다...",
+  "signup_back_home": "메인으로",
+  "signup_tag": "SIGN UP",
+  "signup_title": "회원 유형을 선택하고 정보를 입력하세요",
+  "signup_subtitle": "Supabase 인증을 통해 안전하게 가입하고, 프로필 정보를 저장합니다.",
+  "signup_step_select": "1. 회원 유형 선택",
+  "signup_step_form": "2. 정보 입력",
+  "signup_step_complete": "3. 완료",
+  "signup_type_title": "어떤 유형으로 가입하시나요?",
+  "signup_type_description": "가입 후에도 프로필에서 회원 유형을 변경할 수 있습니다.",
+  "signup_type_supplier_badge": "공급업체",
+  "signup_type_supplier_title": "상품을 공급하고 싶은 파트너",
+  "signup_type_supplier_desc": "사업자등록증과 주요 판매 채널 정보를 등록해 주세요.",
+  "signup_type_seller_badge": "셀러",
+  "signup_type_seller_title": "라이브 커머스를 진행하는 셀러",
+  "signup_type_seller_desc": "연락 가능한 정보를 입력하고, 운영 중인 채널을 알려주세요.",
+  "signup_type_member_badge": "일반회원",
+  "signup_type_member_title": "룩북 소식을 받아보고 싶은 회원",
+  "signup_type_member_desc": "기본 연락처만 입력하면 가입할 수 있습니다.",
+  "signup_next": "다음 단계",
+  "signup_form_title": "기본 정보를 입력해주세요",
+  "signup_form_description": "선택한 회원 유형에 맞춰 필수 항목이 달라집니다.",
+  "signup_full_name_label": "이름",
+  "signup_full_name_hint": "실명을 입력해주세요.",
+  "signup_email_label": "이메일",
+  "signup_email_hint": "로그인 아이디로 사용됩니다.",
+  "signup_password_label": "비밀번호",
+  "signup_password_hint": "8자 이상, 영문/숫자 조합을 권장합니다.",
+  "signup_phone_label": "연락처",
+  "signup_company_label": "회사/브랜드명",
+  "signup_business_label": "사업자등록번호",
+  "signup_platforms_label": "주요 판매 플랫폼",
+  "signup_platform_youtube": "유튜브",
+  "signup_platform_tiktok": "틱톡",
+  "signup_platform_instagram": "인스타그램",
+  "signup_platform_grab": "그랩",
+  "signup_platform_clickmate": "클릭메이트",
+  "signup_platform_other": "기타",
+  "signup_platforms_hint": "복수 선택이 가능합니다.",
+  "signup_channel_label": "라이브 채널 URL",
+  "signup_channel_hint": "중복 등록된 URL은 사용할 수 없습니다.",
+  "signup_terms_title": "약관 동의",
+  "signup_terms_required_title": "개인정보 수집 및 이용 동의 (필수)",
+  "signup_terms_intro": "㈜루체는 회원 가입을 위해 아래의 개인정보를 수집·이용합니다.",
+  "signup_terms_item1": "수집 항목: 이름, 이메일, 비밀번호, 연락처, 선택적으로 회사명 및 채널 정보",
+  "signup_terms_item2": "이용 목적: 서비스 제공, 회원 식별, 고객 상담, 파트너 매칭",
+  "signup_terms_item3": "보유 기간: 회원 탈퇴 후 최대 3년 보관 후 즉시 파기",
+  "signup_terms_confirm": "위 내용을 확인하였으며 동의합니다.",
+  "signup_terms_required": "개인정보 수집 및 이용에 동의합니다. (필수)",
+  "signup_terms_marketing": "이벤트 및 마케팅 정보 수신에 동의합니다. (선택)",
+  "signup_prev": "이전 단계",
+  "signup_submit": "회원가입 완료",
+  "signup_complete_title": "가입 신청이 완료되었습니다.",
+  "signup_complete_message": "입력하신 이메일 주소로 인증 메일을 전송했습니다. 메일 확인 후 로그인해주세요.",
+  "signup_complete_home": "메인으로 돌아가기",
   "lookbook_title": "라이브 준비를 위한 셀렉션",
   "filter_all": "전체",
   "filter_fashion": "패션",
