--- a/locales/zh.json
+++ b/locales/zh.json
@@ -5,6 +5,71 @@
   "nav_checklist": "清单",
   "nav_admin": "管理员",
   "signup": "注册",
+  "signup_status_tag": "注册状态",
+  "signup_status_title": "会员注册概览",
+  "signup_status_description": "实时查看最新的会员注册信息。",
+  "signup_status_name": "姓名",
+  "signup_status_type": "类型",
+  "signup_status_company": "公司/品牌",
+  "signup_status_platforms": "主要平台",
+  "signup_status_channel": "频道 URL",
+  "signup_status_marketing": "营销订阅",
+  "signup_status_created": "提交时间",
+  "signup_status_loading": "正在加载注册信息...",
+  "signup_back_home": "返回首页",
+  "signup_tag": "SIGN UP",
+  "signup_title": "选择会员类型并填写信息",
+  "signup_subtitle": "通过 Supabase 认证安全注册并保存资料。",
+  "signup_step_select": "1. 选择类型",
+  "signup_step_form": "2. 填写信息",
+  "signup_step_complete": "3. 完成",
+  "signup_type_title": "请选择适合您的会员类型",
+  "signup_type_description": "注册后仍可在个人资料中修改会员类型。",
+  "signup_type_supplier_badge": "供应商",
+  "signup_type_supplier_title": "希望提供商品的合作伙伴",
+  "signup_type_supplier_desc": "请上传营业执照并填写主要销售渠道。",
+  "signup_type_seller_badge": "卖家",
+  "signup_type_seller_title": "进行直播电商的卖家",
+  "signup_type_seller_desc": "请输入联系方式并告知正在运营的频道。",
+  "signup_type_member_badge": "普通会员",
+  "signup_type_member_title": "想要接收造型书资讯的会员",
+  "signup_type_member_desc": "只需填写基本联系方式即可完成注册。",
+  "signup_next": "下一步",
+  "signup_form_title": "请输入基本信息",
+  "signup_form_description": "根据会员类型不同，必填项会有所变化。",
+  "signup_full_name_label": "姓名",
+  "signup_full_name_hint": "请填写真实姓名。",
+  "signup_email_label": "邮箱",
+  "signup_email_hint": "将作为登录账号使用。",
+  "signup_password_label": "密码",
+  "signup_password_hint": "建议使用8位以上的字母和数字组合。",
+  "signup_phone_label": "联系电话",
+  "signup_company_label": "公司/品牌名",
+  "signup_business_label": "营业执照号码",
+  "signup_platforms_label": "主要销售平台",
+  "signup_platform_youtube": "YouTube",
+  "signup_platform_tiktok": "TikTok",
+  "signup_platform_instagram": "Instagram",
+  "signup_platform_grab": "Grab",
+  "signup_platform_clickmate": "Clickmate",
+  "signup_platform_other": "其他",
+  "signup_platforms_hint": "可选择多个平台。",
+  "signup_channel_label": "直播频道 URL",
+  "signup_channel_hint": "不可重复使用已登记的 URL。",
+  "signup_terms_title": "条款同意",
+  "signup_terms_required_title": "个人信息收集与使用同意（必填）",
+  "signup_terms_intro": "LUCE 为会员注册收集并使用以下个人信息。",
+  "signup_terms_item1": "收集项目：姓名、邮箱、密码、联系电话、可选的公司与频道信息",
+  "signup_terms_item2": "用途：提供服务、识别会员、客户咨询、合作伙伴匹配",
+  "signup_terms_item3": "保存期限：会员注销后最多保存3年，随后销毁",
+  "signup_terms_confirm": "我已阅读以上内容并同意。",
+  "signup_terms_required": "我同意收集和使用个人信息。（必填）",
+  "signup_terms_marketing": "我同意接收营销资讯。（可选）",
+  "signup_prev": "上一步",
+  "signup_submit": "完成注册",
+  "signup_complete_title": "注册申请已提交",
+  "signup_complete_message": "我们已发送验证邮件，请查收并完成验证。",
+  "signup_complete_home": "返回首页",
   "lookbook_title": "为直播准备的精选",
   "filter_all": "全部",
   "filter_fashion": "时尚",
