Add dedicated signup completion page and Supabase table fallback

--- a/locales/en.json
+++ b/locales/en.json
@@ -5,6 +5,75 @@
   "nav_checklist": "Checklist",
   "nav_admin": "Admin",
   "signup": "Sign Up",
+  "signup_status_tag": "SIGNUP STATUS",
+  "signup_status_title": "Membership Sign-up Overview",
+  "signup_status_description": "Review the latest membership submissions in real time.",
+  "signup_status_name": "Name",
+  "signup_status_type": "Type",
+  "signup_status_company": "Company/Brand",
+  "signup_status_platforms": "Primary Platforms",
+  "signup_status_channel": "Channel URL",
+  "signup_status_marketing": "Marketing Opt-in",
+  "signup_status_created": "Submitted",
+  "signup_status_loading": "Loading signup data...",
+  "signup_back_home": "Back to Home",
+  "signup_tag": "SIGN UP",
+  "signup_title": "Choose a member type and share your details",
+  "signup_subtitle": "Sign up securely with Supabase authentication and profile storage.",
+  "signup_step_select": "1. Choose type",
+  "signup_step_form": "2. Enter info",
+  "signup_step_complete": "3. Complete",
+  "signup_type_title": "Which type best describes you?",
+  "signup_type_description": "You can update your member type later from your profile.",
+  "signup_type_supplier_badge": "Supplier",
+  "signup_type_supplier_title": "Partner providing products",
+  "signup_type_supplier_desc": "Add your business registration and main sales channels.",
+  "signup_type_seller_badge": "Seller",
+  "signup_type_seller_title": "Live commerce seller",
+  "signup_type_seller_desc": "Share contact info and the channels you operate.",
+  "signup_type_member_badge": "Member",
+  "signup_type_member_title": "Stay in the know",
+  "signup_type_member_desc": "Basic contact details are all you need to join.",
+  "signup_next": "Next step",
+  "signup_form_title": "Enter your basic information",
+  "signup_form_description": "Required fields adapt to the member type you selected.",
+  "signup_full_name_label": "Full Name",
+  "signup_full_name_hint": "Please enter your real name.",
+  "signup_email_label": "Email",
+  "signup_email_hint": "Used as your login ID.",
+  "signup_password_label": "Password",
+  "signup_password_hint": "Use 8+ characters with letters and numbers.",
+  "signup_phone_label": "Phone",
+  "signup_company_label": "Company / Brand",
+  "signup_business_label": "Business Registration No.",
+  "signup_platforms_label": "Primary Sales Platforms",
+  "signup_platform_youtube": "YouTube",
+  "signup_platform_tiktok": "TikTok",
+  "signup_platform_instagram": "Instagram",
+  "signup_platform_grab": "Grab",
+  "signup_platform_clickmate": "Clickmate",
+  "signup_platform_other": "Other",
+  "signup_platforms_hint": "You may select multiple platforms.",
+  "signup_channel_label": "Live Channel URL",
+  "signup_channel_hint": "Duplicate URLs cannot be reused.",
+  "signup_terms_title": "Terms & Consents",
+  "signup_terms_required_title": "Consent to collect and use personal data (Required)",
+  "signup_terms_intro": "LUCE collects and uses the following personal data for membership.",
+  "signup_terms_item1": "Collected items: name, email, password, phone, optional company and channel info",
+  "signup_terms_item2": "Purpose: provide services, identify members, support inquiries, match partners",
+  "signup_terms_item3": "Retention: up to 3 years after account deletion, then deleted",
+  "signup_terms_confirm": "I have read the above and agree.",
+  "signup_terms_required": "I agree to the collection and use of personal data. (Required)",
+  "signup_terms_marketing": "I agree to receive marketing updates. (Optional)",
+  "signup_prev": "Previous step",
+  "signup_submit": "Complete Sign-up",
+  "signup_success_tag": "SIGNUP COMPLETE",
+  "signup_success_title": "Your application has been received.",
+  "signup_success_subtitle": "Our team will review the details and get in touch soon. Please double-check the submitted information below.",
+  "signup_success_message": "We sent a verification email to your inbox. Complete the email verification to access the service.",
+  "signup_success_empty": "No submitted information was found. Please start the registration again.",
+  "signup_success_retry": "Fill out the form again",
+  "signup_success_home": "Back to main",
   "lookbook_title": "Selection for Live Commerce",
   "filter_all": "All",
   "filter_fashion": "Fashion",
