Refine signup completion flow

--- a/locales/ko.json
+++ b/locales/ko.json
@@ -70,6 +70,19 @@
   "signup_complete_title": "가입 신청이 완료되었습니다.",
   "signup_complete_message": "입력하신 이메일 주소로 인증 메일을 전송했습니다. 메일 확인 후 로그인해주세요.",
   "signup_complete_home": "메인으로 돌아가기",
+  "signup_preview_heading": "신청 정보 미리보기",
+  "signup_preview_user_type_label": "회원 유형",
+  "signup_preview_name_label": "이름",
+  "signup_preview_email_label": "이메일",
+  "signup_preview_phone_label": "연락처",
+  "signup_preview_company_label": "회사/브랜드",
+  "signup_preview_business_label": "사업자등록번호",
+  "signup_preview_platforms_label": "주요 플랫폼",
+  "signup_preview_channel_label": "채널 URL",
+  "signup_preview_marketing_label": "마케팅 수신",
+  "signup_preview_marketing_yes": "동의",
+  "signup_preview_marketing_no": "미동의",
+  "signup_preview_empty": "최근 제출한 신청 정보를 찾을 수 없습니다.",
   "lookbook_title": "라이브 준비를 위한 셀렉션",
   "filter_all": "전체",
   "filter_fashion": "패션",
