--- a/locales/en.json
+++ b/locales/en.json
@@ -70,6 +70,19 @@
   "signup_complete_title": "Your application has been submitted",
   "signup_complete_message": "We sent a verification email. Please check your inbox to finish sign-up.",
   "signup_complete_home": "Back to main",
+  "signup_preview_heading": "Registration preview",
+  "signup_preview_user_type_label": "Member type",
+  "signup_preview_name_label": "Full name",
+  "signup_preview_email_label": "Email",
+  "signup_preview_phone_label": "Phone",
+  "signup_preview_company_label": "Company/Brand",
+  "signup_preview_business_label": "Business registration",
+  "signup_preview_platforms_label": "Primary platforms",
+  "signup_preview_channel_label": "Channel URL",
+  "signup_preview_marketing_label": "Marketing consent",
+  "signup_preview_marketing_yes": "Consented",
+  "signup_preview_marketing_no": "Declined",
+  "signup_preview_empty": "We couldn't find recent registration details.",
   "lookbook_title": "Selection for Live Commerce",
   "filter_all": "All",
   "filter_fashion": "Fashion",
