--- a/locales/zh.json
+++ b/locales/zh.json
@@ -70,6 +70,19 @@
   "signup_complete_title": "注册申请已提交",
   "signup_complete_message": "我们已发送验证邮件，请查收并完成验证。",
   "signup_complete_home": "返回首页",
+  "signup_preview_heading": "注册信息预览",
+  "signup_preview_user_type_label": "会员类型",
+  "signup_preview_name_label": "姓名",
+  "signup_preview_email_label": "邮箱",
+  "signup_preview_phone_label": "联系电话",
+  "signup_preview_company_label": "公司/品牌",
+  "signup_preview_business_label": "营业执照号码",
+  "signup_preview_platforms_label": "主要平台",
+  "signup_preview_channel_label": "频道 URL",
+  "signup_preview_marketing_label": "营销同意",
+  "signup_preview_marketing_yes": "同意",
+  "signup_preview_marketing_no": "不同意",
+  "signup_preview_empty": "未找到最新的注册信息。",
   "lookbook_title": "为直播准备的精选",
   "filter_all": "全部",
   "filter_fashion": "时尚",
