Fix seller platform payload and update signup messaging (#6)

--- a/locales/en.json
+++ b/locales/en.json
@@ -68,7 +68,7 @@
   "signup_prev": "Previous step",
   "signup_submit": "Complete Sign-up",
   "signup_complete_title": "Your application has been submitted",
-  "signup_complete_message": "We sent a verification email. Please check your inbox to finish sign-up.",
+  "signup_complete_message": "Your LUCE LOOKBOOK membership is confirmed. Our team will be in touch shortly.",
   "signup_complete_home": "Back to main",
   "signup_preview_heading": "Registration preview",
   "signup_preview_user_type_label": "Member type",
