--- a/locales/ko.json
+++ b/locales/ko.json
@@ -68,7 +68,7 @@
   "signup_prev": "이전 단계",
   "signup_submit": "회원가입 완료",
   "signup_complete_title": "가입 신청이 완료되었습니다.",
-  "signup_complete_message": "입력하신 이메일 주소로 인증 메일을 전송했습니다. 메일 확인 후 로그인해주세요.",
+  "signup_complete_message": "LUCE LOOKBOOK 가입이 완료되었습니다. 곧 담당자가 안내를 드릴 예정입니다.",
   "signup_complete_home": "메인으로 돌아가기",
   "signup_preview_heading": "신청 정보 미리보기",
   "signup_preview_user_type_label": "회원 유형",
