--- a/locales/zh.json
+++ b/locales/zh.json
@@ -68,7 +68,7 @@
   "signup_prev": "上一步",
   "signup_submit": "完成注册",
   "signup_complete_title": "注册申请已提交",
-  "signup_complete_message": "我们已发送验证邮件，请查收并完成验证。",
+  "signup_complete_message": "您的 LUCE LOOKBOOK 会员申请已完成，我们将尽快与您联系。",
   "signup_complete_home": "返回首页",
   "signup_preview_heading": "注册信息预览",
   "signup_preview_user_type_label": "会员类型",
