Fix profile metrics counts and update footer contact info

--- a/locales/ko.json
+++ b/locales/ko.json
@@ -136,6 +136,6 @@
   "checklist_card3_li3": "라이브 중 공지한 조건 그대로 적용",
   "checklist_card3_li4": "문서 기록 48시간 내 공유",
   "footer_subtitle": "동대문 라이브커머스를 위한 준비 도구. 고른다 → 준비한다 → 방송한다.",
-  "footer_contact": "문의: luce@lookbook.app · 02-000-0000",
-  "footer_copyright": "© 2025 LUCE Commerce Studio. All rights reserved."
+  "footer_contact": "문의: admin@luce.app · 010-9417-7871",
+  "footer_copyright": "© 2025 DSY International. All rights reserved."
 }
