Remove phone number from footer contact info

--- a/locales/en.json
+++ b/locales/en.json
@@ -136,6 +136,6 @@
   "checklist_card3_li3": "Apply conditions exactly as announced during live",
   "checklist_card3_li4": "Share document records within 48 hours",
   "footer_subtitle": "The prep tool for Dongdaemun Live Commerce. Select → Prep → Broadcast.",
-  "footer_contact": "Contact: admin@luce.app · +82-10-9417-7871",
+  "footer_contact": "Contact: admin@luce.app",
   "footer_copyright": "© 2025 DSY International. All rights reserved."
 }
