--- a/locales/zh.json
+++ b/locales/zh.json
@@ -136,6 +136,6 @@
   "checklist_card3_li3": "严格按照直播中公布的条件执行",
   "checklist_card3_li4": "48小时内共享文件记录",
   "footer_subtitle": "东大门直播电商的准备工具。挑选 → 准备 → 广播。",
-  "footer_contact": "联系: admin@luce.app · +82-10-9417-7871",
+  "footer_contact": "联系: admin@luce.app",
   "footer_copyright": "© 2025 DSY International. 保留所有权利。"
 }
