--- a/locales/zh.json
+++ b/locales/zh.json
@@ -92,11 +92,11 @@
   "metric_products": "已登记造型",
   "metric_updated": "最近更新",
   "metric_suppliers": "供应商",
-  "metric_suppliers_caption": "直播准备就绪",
+  "metric_suppliers_caption": "产品供应中",
   "metric_sellers": "卖家池",
-  "metric_sellers_caption": "等待精选",
+  "metric_sellers_caption": "甄选等待中",
   "metric_members": "会员",
-  "metric_members_caption": "已订阅",
+  "metric_members_caption": "资讯订阅中",
   "metric_error": "无法加载指标。",
   "lookbook_loader": "正在加载下一个造型...",
   "selection_title": "精选篮",
@@ -136,6 +136,6 @@
   "checklist_card3_li3": "严格按照直播中公布的条件执行",
   "checklist_card3_li4": "48小时内共享文件记录",
   "footer_subtitle": "东大门直播电商的准备工具。挑选 → 准备 → 广播。",
-  "footer_contact": "联系: admin@luce.app · +82-10-9417-7871",
+  "footer_contact": "联系: admin@luce.app",
   "footer_copyright": "© 2025 DSY International. 保留所有权利。"
 }
