Update metric captions for ongoing states (#18)

--- a/locales/en.json
+++ b/locales/en.json
@@ -92,11 +92,11 @@
   "metric_products": "Registered Looks",
   "metric_updated": "Last updated",
   "metric_suppliers": "Suppliers",
-  "metric_suppliers_caption": "Ready for Live",
+  "metric_suppliers_caption": "Supplying Products",
   "metric_sellers": "Seller Pool",
-  "metric_sellers_caption": "Pending Selection",
+  "metric_sellers_caption": "Awaiting Selection",
   "metric_members": "Members",
-  "metric_members_caption": "Subscribed",
+  "metric_members_caption": "Subscribed to Updates",
   "metric_error": "Failed to load metrics.",
   "lookbook_loader": "Loading next looks...",
   "selection_title": "Selection Cart",
