--- a/locales/zh.json
+++ b/locales/zh.json
@@ -92,11 +92,11 @@
   "metric_products": "已登记造型",
   "metric_updated": "最近更新",
   "metric_suppliers": "供应商",
-  "metric_suppliers_caption": "直播准备就绪",
+  "metric_suppliers_caption": "产品供应中",
   "metric_sellers": "卖家池",
-  "metric_sellers_caption": "等待精选",
+  "metric_sellers_caption": "甄选等待中",
   "metric_members": "会员",
-  "metric_members_caption": "已订阅",
+  "metric_members_caption": "资讯订阅中",
   "metric_error": "无法加载指标。",
   "lookbook_loader": "正在加载下一个造型...",
   "selection_title": "精选篮",
