--- a/locales/ko.json
+++ b/locales/ko.json
@@ -92,11 +92,11 @@
   "metric_products": "등록된 룩",
   "metric_updated": "최근 업데이트",
   "metric_suppliers": "공급업체",
-  "metric_suppliers_caption": "라이브 준비 완료",
+  "metric_suppliers_caption": "제품 공급 중",
   "metric_sellers": "셀러 풀",
-  "metric_sellers_caption": "셀렉션 대기",
+  "metric_sellers_caption": "셀렉션 대기 중",
   "metric_members": "일반회원",
-  "metric_members_caption": "소식 구독",
+  "metric_members_caption": "소식 구독 중",
   "metric_error": "지표를 불러오지 못했습니다.",
   "lookbook_loader": "다음 룩을 불러오는 중...",
   "selection_title": "셀렉션 바구니",
