Add missing translations for hero and signup

--- a/locales/en.json
+++ b/locales/en.json
@@ -5,6 +5,10 @@
   "nav_checklist": "Checklist",
   "nav_admin": "Admin",
   "signup": "Sign Up",
+  "hero_feature_tag": "LOOKBOOK FEATURE",
+  "hero_feature_title": "'APM x LUCE' automated AI model updates for supplier catalogs",
+  "hero_feature_description": "Experience AI-powered onboarding and catalog updates for apM partners.",
+  "hero_video_fallback": "Your browser cannot play this video.",
   "signup_status_tag": "SIGNUP STATUS",
   "signup_status_title": "Membership Sign-up Overview",
   "signup_status_description": "Review the latest membership submissions in real time.",
@@ -34,6 +38,10 @@
   "signup_type_member_badge": "Member",
   "signup_type_member_title": "Stay in the know",
   "signup_type_member_desc": "Basic contact details are all you need to join.",
+  "signup_type_supplier_cta": "Join as Supplier",
+  "signup_type_seller_cta": "Join as Seller",
+  "signup_type_member_cta": "Join as Member",
+  "signup_type_feedback": "Choose a membership type to continue.",
   "signup_next": "Next step",
   "signup_form_title": "Enter your basic information",
   "signup_form_description": "Required fields adapt to the member type you selected.",
@@ -56,14 +64,21 @@
   "signup_platforms_hint": "You may select multiple platforms.",
   "signup_channel_label": "Live Channel URL",
   "signup_channel_hint": "Duplicate URLs cannot be reused.",
+  "signup_change_type": "Choose another member type",
   "signup_terms_title": "Terms & Consents",
   "signup_terms_required_title": "Consent to collect and use personal data (Required)",
   "signup_terms_intro": "LUCE collects and uses the following personal data for membership.",
   "signup_terms_item1": "Collected items: name, email, password, phone, optional company and channel info",
   "signup_terms_item2": "Purpose: provide services, identify members, support inquiries, match partners",
   "signup_terms_item3": "Retention: up to 3 years after account deletion, then deleted",
+  "signup_terms_required_notice": "You may refuse consent, but core services will be limited without it.",
   "signup_terms_confirm": "I have read the above and agree.",
   "signup_terms_required": "I agree to the collection and use of personal data. (Required)",
+  "signup_terms_marketing_intro": "LUCE may share the following marketing updates.",
+  "signup_terms_marketing_item1": "What we send: newsletters, events, benefits, product updates",
+  "signup_terms_marketing_item2": "Data used: email, phone, service usage insights for recommendations",
+  "signup_terms_marketing_item3": "Opt-out: you can unsubscribe anytime and it takes effect immediately.",
+  "signup_terms_marketing_notice": "This is optional and does not affect core services.",
   "signup_terms_marketing": "I agree to receive marketing updates. (Optional)",
   "signup_prev": "Previous step",
   "signup_submit": "Complete Sign-up",
@@ -83,6 +98,9 @@
   "signup_preview_marketing_yes": "Consented",
   "signup_preview_marketing_no": "Declined",
   "signup_preview_empty": "We couldn't find recent registration details.",
+  "signup_selected_type_label": "Selected member type",
+  "signup_selected_type_loading": "Loading your member type...",
+  "signup_selected_type_help": "We'll load the required fields for this type.",
   "lookbook_title": "Selection for Live Commerce",
   "filter_all": "All",
   "filter_fashion": "Fashion",
@@ -98,7 +116,10 @@
   "metric_members": "Members",
   "metric_members_caption": "Subscribed to Updates",
   "metric_error": "Failed to load metrics.",
+  "lookbook_empty": "No looks to display right now.",
   "lookbook_loader": "Loading next looks...",
+  "look_modal_video_error": "Your browser cannot play this video.",
+  "look_modal_video_placeholder": "Video unavailable.",
   "selection_title": "Selection Cart",
   "selection_subtitle": "Collect looks before requesting the studio.",
   "selection_export": "Create Looksheet (10s)",
