--- a/locales/ko.json
+++ b/locales/ko.json
@@ -5,6 +5,10 @@
   "nav_checklist": "체크리스트",
   "nav_admin": "어드민",
   "signup": "회원가입",
+  "hero_feature_tag": "LOOKBOOK FEATURE",
+  "hero_feature_title": "'APM x LUCE' 가입 공급업체 대상 판매제품 AI 모델 자동화 업데이트",
+  "hero_feature_description": "apM 회원가입과 매장·판매제품 업데이트를 AI로 자동화한 신규 경험을 만나보세요.",
+  "hero_video_fallback": "현재 브라우저에서는 동영상을 재생할 수 없습니다.",
   "signup_status_tag": "SIGNUP STATUS",
   "signup_status_title": "회원 가입 현황",
   "signup_status_description": "실시간으로 접수된 회원 정보를 확인하세요.",
@@ -34,6 +38,10 @@
   "signup_type_member_badge": "일반회원",
   "signup_type_member_title": "룩북 소식을 받아보고 싶은 회원",
   "signup_type_member_desc": "기본 연락처만 입력하면 가입할 수 있습니다.",
+  "signup_type_supplier_cta": "공급업체로 가입",
+  "signup_type_seller_cta": "셀러로 가입",
+  "signup_type_member_cta": "일반회원으로 가입",
+  "signup_type_feedback": "가입 유형을 선택하면 다음 단계로 이동합니다.",
   "signup_next": "다음 단계",
   "signup_form_title": "기본 정보를 입력해주세요",
   "signup_form_description": "선택한 회원 유형에 맞춰 필수 항목이 달라집니다.",
@@ -56,14 +64,21 @@
   "signup_platforms_hint": "복수 선택이 가능합니다.",
   "signup_channel_label": "라이브 채널 URL",
   "signup_channel_hint": "중복 등록된 URL은 사용할 수 없습니다.",
+  "signup_change_type": "회원 유형 다시 선택",
   "signup_terms_title": "약관 동의",
   "signup_terms_required_title": "개인정보 수집 및 이용 동의 (필수)",
   "signup_terms_intro": "㈜루체는 회원 가입을 위해 아래의 개인정보를 수집·이용합니다.",
   "signup_terms_item1": "수집 항목: 이름, 이메일, 비밀번호, 연락처, 선택적으로 회사명 및 채널 정보",
   "signup_terms_item2": "이용 목적: 서비스 제공, 회원 식별, 고객 상담, 파트너 매칭",
   "signup_terms_item3": "보유 기간: 회원 탈퇴 후 최대 3년 보관 후 즉시 파기",
+  "signup_terms_required_notice": "귀하는 위 내용에 대한 동의를 거부할 권리가 있으나, 필수 항목 미동의 시 서비스 이용이 제한될 수 있습니다.",
   "signup_terms_confirm": "위 내용을 확인하였으며 동의합니다.",
   "signup_terms_required": "개인정보 수집 및 이용에 동의합니다. (필수)",
+  "signup_terms_marketing_intro": "루체는 다음과 같이 마케팅 목적의 정보를 안내드릴 수 있습니다.",
+  "signup_terms_marketing_item1": "발송 항목: 뉴스레터, 이벤트 및 혜택 안내, 서비스 업데이트 공지",
+  "signup_terms_marketing_item2": "수집 항목: 이메일, 연락처, 서비스 이용 이력 기반 추천 정보",
+  "signup_terms_marketing_item3": "수신 거부: 언제든지 수신 거부를 요청하실 수 있으며, 거부 시 즉시 반영됩니다.",
+  "signup_terms_marketing_notice": "선택 동의이며, 미동의하셔도 핵심 서비스 이용에는 영향이 없습니다.",
   "signup_terms_marketing": "이벤트 및 마케팅 정보 수신에 동의합니다. (선택)",
   "signup_prev": "이전 단계",
   "signup_submit": "회원가입 완료",
@@ -83,6 +98,9 @@
   "signup_preview_marketing_yes": "동의",
   "signup_preview_marketing_no": "미동의",
   "signup_preview_empty": "최근 제출한 신청 정보를 찾을 수 없습니다.",
+  "signup_selected_type_label": "선택한 회원 유형",
+  "signup_selected_type_loading": "회원 유형을 불러오는 중...",
+  "signup_selected_type_help": "회원 유형에 맞춘 필수 항목을 불러옵니다.",
   "lookbook_title": "라이브 준비를 위한 셀렉션",
   "filter_all": "전체",
   "filter_fashion": "패션",
@@ -98,7 +116,10 @@
   "metric_members": "일반회원",
   "metric_members_caption": "소식 구독 중",
   "metric_error": "지표를 불러오지 못했습니다.",
+  "lookbook_empty": "현재 표시할 룩이 없습니다.",
   "lookbook_loader": "다음 룩을 불러오는 중...",
+  "look_modal_video_error": "현재 브라우저에서는 동영상을 재생할 수 없습니다.",
+  "look_modal_video_placeholder": "재생할 영상을 찾을 수 없습니다.",
   "selection_title": "셀렉션 바구니",
   "selection_subtitle": "스튜디오 요청 전까지 원하는 룩을 모아두세요.",
   "selection_export": "룩시트 10초 생성",
