--- a/locales/zh.json
+++ b/locales/zh.json
@@ -5,6 +5,10 @@
   "nav_checklist": "清单",
   "nav_admin": "管理员",
   "signup": "注册",
+  "hero_feature_tag": "LOOKBOOK 功能",
+  "hero_feature_title": "“APM x LUCE” 面向供应商的商品 AI 模特自动更新",
+  "hero_feature_description": "体验通过 AI 自动化 apM 会员注册及门店、商品更新的全新流程。",
+  "hero_video_fallback": "当前浏览器无法播放该视频。",
   "signup_status_tag": "注册状态",
   "signup_status_title": "会员注册概览",
   "signup_status_description": "实时查看最新的会员注册信息。",
@@ -34,6 +38,10 @@
   "signup_type_member_badge": "普通会员",
   "signup_type_member_title": "想要接收造型书资讯的会员",
   "signup_type_member_desc": "只需填写基本联系方式即可完成注册。",
+  "signup_type_supplier_cta": "以供应商身份加入",
+  "signup_type_seller_cta": "以卖家身份加入",
+  "signup_type_member_cta": "以普通会员加入",
+  "signup_type_feedback": "选择会员类型后即可进入下一步。",
   "signup_next": "下一步",
   "signup_form_title": "请输入基本信息",
   "signup_form_description": "根据会员类型不同，必填项会有所变化。",
@@ -56,14 +64,21 @@
   "signup_platforms_hint": "可选择多个平台。",
   "signup_channel_label": "直播频道 URL",
   "signup_channel_hint": "不可重复使用已登记的 URL。",
+  "signup_change_type": "重新选择会员类型",
   "signup_terms_title": "条款同意",
   "signup_terms_required_title": "个人信息收集与使用同意（必填）",
   "signup_terms_intro": "LUCE 为会员注册收集并使用以下个人信息。",
   "signup_terms_item1": "收集项目：姓名、邮箱、密码、联系电话、可选的公司与频道信息",
   "signup_terms_item2": "用途：提供服务、识别会员、客户咨询、合作伙伴匹配",
   "signup_terms_item3": "保存期限：会员注销后最多保存3年，随后销毁",
+  "signup_terms_required_notice": "您可以拒绝同意，但未同意可能无法使用核心服务。",
   "signup_terms_confirm": "我已阅读以上内容并同意。",
   "signup_terms_required": "我同意收集和使用个人信息。（必填）",
+  "signup_terms_marketing_intro": "LUCE 可能向您发送以下营销资讯。",
+  "signup_terms_marketing_item1": "发送内容：简报、活动与优惠、服务更新",
+  "signup_terms_marketing_item2": "使用信息：邮箱、联系电话、基于使用记录的推荐信息",
+  "signup_terms_marketing_item3": "退订：可随时申请，立即生效",
+  "signup_terms_marketing_notice": "此项为可选，不影响核心服务。",
   "signup_terms_marketing": "我同意接收营销资讯。（可选）",
   "signup_prev": "上一步",
   "signup_submit": "完成注册",
@@ -83,6 +98,9 @@
   "signup_preview_marketing_yes": "同意",
   "signup_preview_marketing_no": "不同意",
   "signup_preview_empty": "未找到最新的注册信息。",
+  "signup_selected_type_label": "已选择的会员类型",
+  "signup_selected_type_loading": "正在加载会员类型...",
+  "signup_selected_type_help": "我们会根据类型加载必填项。",
   "lookbook_title": "为直播准备的精选",
   "filter_all": "全部",
   "filter_fashion": "时尚",
@@ -98,7 +116,10 @@
   "metric_members": "会员",
   "metric_members_caption": "资讯订阅中",
   "metric_error": "无法加载指标。",
+  "lookbook_empty": "当前没有可展示的造型。",
   "lookbook_loader": "正在加载下一个造型...",
+  "look_modal_video_error": "当前浏览器无法播放该视频。",
+  "look_modal_video_placeholder": "暂无可播放的视频。",
   "selection_title": "精选篮",
   "selection_subtitle": "在请求工作室之前收集造型。",
   "selection_export": "生成造型表 (10秒)",
